kubernetes/oci/compute/cluster/.argocd-state/argocd/argo-cd/templates/redis/deployment.yaml
---
# Source: argo-cd/templates/redis/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-redis
  namespace: argocd
  labels:
    helm.sh/chart: argo-cd-10.9.6
    app.kubernetes.io/name: argocd-redis
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/component: redis
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/version: "v3.5.3"
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-redis
  template:
    metadata:
      labels:
        helm.sh/chart: argo-cd-10.9.6
        app.kubernetes.io/name: argocd-redis
        app.kubernetes.io/instance: argocd
        app.kubernetes.io/component: redis
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/part-of: argocd
        app.kubernetes.io/version: "v3.5.3"
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 999
        seccompProfile:
          type: RuntimeDefault
      terminationGracePeriodSeconds: 30
      serviceAccountName: default
      automountServiceAccountToken: true
      containers:
      - name: redis
        image: ecr-public.aws.com/docker/library/redis:8.6.4-alpine
        imagePullPolicy: IfNotPresent
        args:
        - --save
        - ""
        - --appendonly
        - "no"
        - --requirepass $(REDIS_PASSWORD)
        ports:
        - name: redis
          containerPort: 6379
          protocol: TCP
        resources:
          limits:
            memory: 60Mi
          requests:
            cpu: 10m
            memory: 30Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
        volumeMounts:
          - mountPath: /health
            name: health
      nodeSelector:
        kubernetes.io/os: linux
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/name: argocd-redis
              topologyKey: kubernetes.io/hostname
      volumes:
        - name: health
          configMap:
            name: argocd-redis-health-configmap
            defaultMode: 493
      dnsPolicy: ClusterFirst
