kubernetes/oci/compute/cluster/.argocd-state/argocd/argo-cd/templates/redis/service.yaml
---
# Source: argo-cd/templates/redis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-redis
  namespace: argocd
  labels:
    helm.sh/chart: argo-cd-10.10.0
    app.kubernetes.io/name: argocd-redis
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/component: redis
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/version: "v3.5.4"
spec:  
  ports:
  - name: redis
    port: 6379
    targetPort: redis
  selector:
    app.kubernetes.io/name: argocd-redis
    app.kubernetes.io/instance: argocd
